--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,3 +13,4 @@ wordpress_admin_name: admin
 wordpress_admin_email: root@localhost.localdomain
 wordpress_password: 'tuFr8=aPra@a'
 wordpress_install_themes: []
+wordpress_install_plugins: []
