--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -19,6 +19,7 @@
 
 - name: check install (plugin)
   shell: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' plugin is-installed {{ item.1 }}"
+  changed_when: False
   with_subelements:
     - wordpress_installs
     - plugins
