--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
-  description: Set up wordpress in Debian-like systems
+  description: Set up wordpress in Debian-like systems (using wp-cli).
   license: MIT
   min_ansible_version: 1.4
   platforms:
@@ -14,5 +14,5 @@ galaxy_info:
     versions:
     - all
   categories:
-  - system
+  - web
 dependencies: []
