--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -5,3 +5,18 @@
   sudo: true
   roles:
     - wordpress
+  vars:
+    wordpress_installs:
+      - name: wordpress
+        dbname: wordpress
+        dbuser: wordpress
+        dbpass: 'heCrE7*d2KEs'
+        dbhost: localhost
+        path: /var/www
+        url: "http://{{ ansible_eth1.ipv4.address }}"
+        title: wordpress
+        admin_name: admin
+        admin_email: root@localhost.localdomain
+        admin_password: 'tuFr8=aPra@a'
+        themes: []
+        plugins: []
