--- a/tasks/core.yml
+++ b/tasks/core.yml
@@ -11,11 +11,11 @@
 - name: download
   shell: "wp-cli --allow-root --no-color --path='{{ item.item.path }}' core download"
   with_items: check_download.results
-  when: wordpress_installs and item.rc != 0
+  when: item.rc != 0
   tags: [configuration, wordpress, wordpress-core, wordpress-downloaded]
 
 - name: configure
-  shell: "wp-cli --allow-root --no-color --quiet --path='{{ item.path }}' core config --dbname='{{ item.dbname }}' --dbuser='{{ item.dbuser }}' --dbpass='{{ item.dbpass }}' --dbhost='{{ item.dbhost | default('localhost') }}'"
+  shell: "wp-cli --allow-root --no-color --path='{{ item.path }}' core config --dbname='{{ item.dbname }}' --dbuser='{{ item.dbuser }}' --dbpass='{{ item.dbpass }}' --dbhost='{{ item.dbhost | default('localhost') }}'"
   args:
     creates: "{{ item.path }}/wp-config.php"
   with_items: wordpress_installs
@@ -32,7 +32,7 @@
 - name: install
   shell: "wp-cli --allow-root --no-color --path='{{ item.item.path }}' core install --url='{{ item.item.url }}' --title='{{ item.item.title }}' --admin_name='{{ item.item.admin_name | default('admin') }}' --admin_email='{{ item.item.admin_email }}' --admin_password='{{ item.item.admin_password }}'"
   with_items: check_installation.results
-  when: wordpress_installs and item.rc != 0
+  when: item.rc != 0
   tags: [configuration, wordpress, wordpress-core, wordpress-install]
 
 - name: check install
