Fail when wp-cli --info does not display any output
Fixes #13

--- a/tasks/wp-cli.yml
+++ b/tasks/wp-cli.yml
@@ -9,3 +9,10 @@
     group: root
     mode: 0755
   tags: [configuration, wordpress, wordpress-wp-cli, wordpress-wp-cli-install]
+
+- name: check (wp-cli)
+  shell: "wp-cli --allow-root --no-color --info"
+  register: check_info
+  failed_when: "'WP-CLI' not in check_info.stdout"
+  changed_when: False
+  tags: [configuration, wordpress, wordpress-wp-cli, wordpress-wp-cli-check]
