--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,10 @@ env:
   - ANSIBLE_VERSION=1.4.1
   - ANSIBLE_VERSION=1.4
 
+branches:
+  only:
+    - master
+
 before_install:
   - sudo apt-get update -qq
 
