--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,16 @@ branches:
   only:
     - master
 
+matrix:
+  allow_failures:
+    # See https://github.com/ansible/ansible/issues/6412
+    #     https://github.com/ansible/ansible/issues/6474
+    - env: ANSIBLE_VERSION=1.5.5
+    - env: ANSIBLE_VERSION=1.5.4
+    - env: ANSIBLE_VERSION=1.5.3
+    - env: ANSIBLE_VERSION=1.5.2
+    - env: ANSIBLE_VERSION=1.5.1
+
 before_install:
   - sudo apt-get update -qq
 
