Added user csv import

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,6 @@ wordpress_installs:
     admin_password: 'tuFr8=aPra@a'
     themes: []
     plugins: []
+    users:
+      src: ../files/users.csv
+      skip_update: true
