Fix idempotency issues when skip_update is false

--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -16,14 +16,15 @@
     owner: root
     group: root
     mode: 0644
+  register: check_copy_users
   with_items: wordpress_installs
   when: item.users.src is defined
   tags: [configuration, wordpress, wordpress-users]
 
 - name: install (users)
-  shell: "wp-cli --allow-root --no-color --path='{{ item.path }}' user import-csv {{ wordpress_data_path }}/{{ item.dbname }}.csv {{ '--skip-update' if item.users.skip_update | default(true) else '' }} --send-email"
+  shell: "wp-cli --allow-root --no-color --path='{{ item.item.path }}' user import-csv {{ wordpress_data_path }}/{{ item.item.dbname }}.csv {{ '--skip-update' if item.item.users.skip_update | default(true) else '' }} --send-email"
   register: check_installation_users
   changed_when: "'Success' in check_installation_users.stdout"
-  with_items: wordpress_installs
-  when: item.users.src is defined
+  with_items: check_copy_users.results
+  when: check_copy_users is defined and item.changed
   tags: [configuration, wordpress, wordpress-users]
