Updated test configuration

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,22 +17,4 @@ wordpress_installs:
     themes: []
     plugins: []
     users: {}
-    options:
-      - command: add
-        name: test
-        value: 'not existing'
-      - command: add
-        name: test
-        value: 'existing'
-      - command: update
-        name: test
-        value: 'existing'
-      - command: update
-        name: testtest
-        value: 'not existing'
-      - command: delete
-        name: test
-        value: 'existing'
-      - command: update
-        name: testtesttest
-        value: 'not existing'
+    options: []
