Fixed travis test

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -34,7 +34,7 @@
             name: testtest
             value: 'not existing'
           - command: delete
-            name: siteurl
+            name: recently_edited
             value: 'existing'
           - command: delete
             name: testtesttest
