Added option to activate and deactivate themes and plugins, fixes #26

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -17,8 +17,14 @@
         admin_name: admin
         admin_email: root@localhost.localdomain
         admin_password: 'tuFr8=aPra@a'
-        themes: []
-        plugins: []
+        themes:
+          - name: twentytwelve
+            activate: true
+          - name: twentythirteen
+        plugins:
+          - name: contact-form-7
+            activate: false
+          - name: simple-fields
         users: {}
         options:
           - command: add
