Added option to activate and deactivate themes and plugins, fixes #26

--- a/tasks/themes.yml
+++ b/tasks/themes.yml
@@ -1,7 +1,7 @@
 # tasks file for wordpress, themes
 ---
 - name: identify installation (theme)
-  shell: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}"
+  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}"
   register: check_installation_themes
   failed_when: False
   changed_when: False
@@ -12,13 +12,13 @@
   tags: [configuration, wordpress, wordpress-themes, wordpress-is-installed-theme]
 
 - name: install (theme)
-  shell: "wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' theme install {{ item.item.1.name }}"
+  command: "wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' theme install {{ item.item.1.name }}"
   with_items: check_installation_themes.results
   when: check_installation_themes is defined and item.item.1.name and item.rc != 0
   tags: [configuration, wordpress, wordpress-themes, wordpress-install-theme]
 
 - name: check install (theme)
-  shell: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}"
+  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}"
   changed_when: False
   with_subelements:
     - wordpress_installs
@@ -27,7 +27,7 @@
   tags: [configuration, wordpress, wordpress-themes, wordpress-install-theme-check]
 
 - name: activate (theme)
-  shell: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme activate {{ item.1.name }}"
+  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme activate {{ item.1.name }}"
   register: check_activate_theme
   changed_when: "'Success: Switched to' in check_activate_theme.stdout"
   with_subelements:
